# durer-pdf-generator

./: .gitignore  README.md  do.py  footnote.py  generator.py  merger.py  merger.sh  parser.py  pdfunite.bat  pyproject.toml  requirements.txt  tsv-to-pdf-script.py
input_tsvs/: debug_files.tsv  files.tsv.sample  sample_files.tsv  sample_teamdatas.tsv  teamdatas.tsv.sample
